[package]
name = "api_layer_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_layer_client"
path = "src/lib.rs"
doctest = false

[dependencies]
tokio = { version = "^1.21.2", features = ["full"] }
reqwest = { version = "^0.11", features = ["json"] }
serde = "^1.0.147"
serde_json = "^1.0.87"
anyhow = "^1.0.66"
chrono = "^0.4.22"

[dev-dependencies]
lazy_static = "^1.4.0"