[package]
name = "py"
version = "0.1.0"
edition = "2021"

[lib]
name = "py"
crate-type = ["cdylib"]

[dependencies]
api_layer_client = { path = "../lib" }
pyo3 = { version = "^0.17", features = ["extension-module", "anyhow"] }
pyo3-asyncio = { version = "^0.17", features = ["tokio-runtime"] }
tokio = { version = "^1.21.2", features = ["full"] }